--- a/Resources/form.phtml
+++ b/Resources/form.phtml
@@ -1,4 +1,4 @@
-<form action="<?php echo urlencode($form->getAction()); ?>" method="<?php echo $form->getMethod(); ?>"<?php if($form->isMultipart()): ?> enctype="multipart/form-data"<?php endif; ?>>
+<form action="<?php echo $form->getAction(); ?>" method="<?php echo $form->getMethod(); ?>"<?php if($form->isMultipart()): ?> enctype="multipart/form-data"<?php endif; ?>>
 <?php foreach($form->elements() as $element): ?>
     <p>
 <?php echo $this->renderElement($element, $form); ?>
